# alphapoker

./: .gitignore  README.md  pyproject.toml
experiments/holdem_ac_dagger_init_tuned_mix_1k_safe_eval/: holdem_policy.pt  holdem_value.pt  metrics.json
experiments/holdem_ac_dagger_init_tuned_mix_200_safe_eval/: holdem_policy.pt  holdem_value.pt  metrics.json
experiments/holdem_ac_init_action_features_p0_vs_mix_potheavy_1k/: holdem_policy.pt  holdem_value.pt  metrics.json
experiments/holdem_ac_potheavy_1k_cross_seat_vs_pot_odds_300/: metrics.json
experiments/holdem_ac_potheavy_1k_cross_seat_vs_random_1k/: metrics.json
experiments/holdem_balanced_rollout_s8_vs_tight_eval500_paired_deals/: metrics.json
scripts/: train_kuhn_cfr.sh  train_leduc_cfr.sh
tests/: test_cfr.py  test_dataset.py  test_distill_leduc.py  test_evaluate_holdem_equity_model.py  test_evaluate_holdem_mccfr.py  test_evaluate_holdem_model.py  test_evaluate_holdem_policy.py  test_evaluate_holdem_policy_imitation.py  test_evaluate_leduc_model.py  test_experiment_summary.py  test_holdem.py  test_holdem_dataset.py  test_holdem_evaluation.py  test_holdem_mccfr.py  test_holdem_model.py  test_holdem_self_play.py  test_kuhn.py  test_leduc.py  test_leduc_cfr.py  test_leduc_dataset.py  test_leduc_model.py  test_model.py  test_sweep_holdem_equity_thresholds.py  test_sweep_holdem_mccfr_min_weight.py  test_sweep_holdem_pot_odds_params.py  test_train_holdem_actor_critic.py  test_train_holdem_equity.py  test_train_holdem_mccfr.py  test_train_holdem_policy.py  test_train_holdem_policy_gradient.py
(+1023 files in other folders)
