[project]
name = "alphapoker"
version = "0.1.0"
description = "AlphaGo-inspired self-play research stack for poker"
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]
train = [
    "numpy>=1.24",
    "torch>=2.0",
]
holdem = [
    "treys>=0.1.8",
]

[project.scripts]
alphapoker = "alphapoker.train:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/alphapoker"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"
